// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`avoid-conflicts-to-pipeline.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// |>
const status = %GetOptimizationStatus(fn);

=====================================output=====================================
// |>
const status = %GetOptimizationStatus(fn);

================================================================================
`;

exports[`avoid-conflicts-to-pipeline.js format[acorn] 1`] = `
"Unexpected token (2:16)
  1 | // |>
> 2 | const status = %GetOptimizationStatus(fn);
    |                ^
  3 |
Cause: Unexpected token (2:15)"
`;

exports[`avoid-conflicts-to-pipeline.js format[espree] 1`] = `
"Unexpected token % (2:16)
  1 | // |>
> 2 | const status = %GetOptimizationStatus(fn);
    |                ^
  3 |
Cause: Unexpected token %"
`;

exports[`avoid-conflicts-to-pipeline.js format[meriyah] 1`] = `
"Unexpected token: '%' (2:16)
  1 | // |>
> 2 | const status = %GetOptimizationStatus(fn);
    |                ^
  3 |
Cause: [2:15-2:16]: Unexpected token: '%'"
`;

exports[`avoid-conflicts-to-pipeline.js format[oxc] 1`] = `
"Unexpected token (2:16)
  1 | // |>
> 2 | const status = %GetOptimizationStatus(fn);
    |                ^
  3 |"
`;

exports[`avoid-conflicts-to-pipeline.js format[yuku] 1`] = `
"Unexpected token '%' (2:16)
  1 | // |>
> 2 | const status = %GetOptimizationStatus(fn);
    |                ^
  3 |"
`;

exports[`intrinsic_call.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function doSmth()     {
            %DebugPrint
        (
                foo )
  }

    function printFunc  (
        f
) {
    if(%
    IsAsmWasmCode(f))              console.log("asm.js");
        if(

        % IsWasmCode(
        f))
            console.log (
                "wasm"
            );

    console.log
    (%
        GetFunctioName(f)
        );
}

=====================================output=====================================
function doSmth() {
  %DebugPrint(foo);
}

function printFunc(f) {
  if (%IsAsmWasmCode(f)) console.log("asm.js");
  if (%IsWasmCode(f)) console.log("wasm");

  console.log(%GetFunctioName(f));
}

================================================================================
`;

exports[`intrinsic_call.js format[acorn] 1`] = `
"Unexpected token (2:13)
  1 | function doSmth()     {
> 2 |             %DebugPrint
    |             ^
  3 |         (
  4 |                 foo )
  5 |   }
Cause: Unexpected token (2:12)"
`;

exports[`intrinsic_call.js format[espree] 1`] = `
"Unexpected token % (2:13)
  1 | function doSmth()     {
> 2 |             %DebugPrint
    |             ^
  3 |         (
  4 |                 foo )
  5 |   }
Cause: Unexpected token %"
`;

exports[`intrinsic_call.js format[meriyah] 1`] = `
"Unexpected token: '%' (2:13)
  1 | function doSmth()     {
> 2 |             %DebugPrint
    |             ^
  3 |         (
  4 |                 foo )
  5 |   }
Cause: [2:12-2:13]: Unexpected token: '%'"
`;

exports[`intrinsic_call.js format[oxc] 1`] = `
"Unexpected token (2:13)
  1 | function doSmth()     {
> 2 |             %DebugPrint
    |             ^
  3 |         (
  4 |                 foo )
  5 |   }"
`;

exports[`intrinsic_call.js format[yuku] 1`] = `
"Unexpected token '%' (2:13)
  1 | function doSmth()     {
> 2 |             %DebugPrint
    |             ^
  3 |         (
  4 |                 foo )
  5 |   }"
`;
